--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,10 @@
                 }
             },
             "previewLimit": 50,
-            "server": "localhost",
+            "server": "dpg-crpeb8dsvqrc738qdm2g-a",
             "driver": "PostgreSQL",
-            "name": "Render.com",
-            "connectString": "postgresql://data_base_48xz_user:1CkJdWI2oV3KlXOJ4LBPFMJmibRuYpkk@dpg-crliskbv2p9s73foi4ug-a.oregon-postgres.render.com/data_base_48xz"
+            "name": "Render",
+            "connectString": "postgresql://render5_user:wYpLJXHrmuSZWODgKj0xNmXOtA6o1zHe@dpg-crpeb8dsvqrc738qdm2g-a.oregon-postgres.render.com/render5"
         }
     ]
 }
